{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 21,
  "lineage": "6d1c2abe-8b5d-b560-9a74-609e3e44f9cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03aa2d9ab89fab6f5",
            "domain": "vpc",
            "id": "eipalloc-03aa2d9ab89fab6f5",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-54-180-166-227.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.166.227",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:internet-gateway/igw-08ebef606fc6e5b31",
            "id": "igw-08ebef606fc6e5b31",
            "owner_id": "052937454741",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-igw"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-igw"
            },
            "vpc_id": "vpc-0ff30a3274c30c3e3"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03aa2d9ab89fab6f5",
            "connectivity_type": "public",
            "id": "nat-03b352624dda62542",
            "network_interface_id": "eni-0f30414f20865af57",
            "private_ip": "10.0.1.167",
            "public_ip": "54.180.166.227",
            "subnet_id": "subnet-0861d7d5dd593fab6",
            "tags": {
              "Name": "user**-nat-gw"
            },
            "tags_all": {
              "Name": "user**-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08ebef606fc6e5b31",
            "id": "r-rtb-095aa8e144edc2e7b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-095aa8e144edc2e7b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cb91bf3b22b4dcfc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03b352624dda62542",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb91bf3b22b4dcfc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:route-table/rtb-0cb91bf3b22b4dcfc",
            "id": "rtb-0cb91bf3b22b4dcfc",
            "owner_id": "052937454741",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-private-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff30a3274c30c3e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:route-table/rtb-095aa8e144edc2e7b",
            "id": "rtb-095aa8e144edc2e7b",
            "owner_id": "052937454741",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-public-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff30a3274c30c3e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dca1805d7f31bfc",
            "route_table_id": "rtb-0cb91bf3b22b4dcfc",
            "subnet_id": "subnet-0eccc58f20f849a16"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a722b6496e3af2b",
            "route_table_id": "rtb-0cb91bf3b22b4dcfc",
            "subnet_id": "subnet-0a92e7460acfc5e36"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080667b6516f64b32",
            "route_table_id": "rtb-095aa8e144edc2e7b",
            "subnet_id": "subnet-0861d7d5dd593fab6"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0408365ff64b92ce0",
            "route_table_id": "rtb-095aa8e144edc2e7b",
            "subnet_id": "subnet-0ec4d2c7a8ec7cd72"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:security-group/sg-00a59a67ef0eceee3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a59a67ef0eceee3",
            "ingress": [],
            "name": "user**-admin-sg",
            "name_prefix": "",
            "owner_id": "052937454741",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-admin-sg"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-admin-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff30a3274c30c3e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:security-group/sg-05ee8b6fea1c40e99",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ee8b6fea1c40e99",
            "ingress": [],
            "name": "user**-web-sg",
            "name_prefix": "",
            "owner_id": "052937454741",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-web-sg"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff30a3274c30c3e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "116.127.84.104/32"
            ],
            "description": "Allow SSH for admin",
            "from_port": 22,
            "id": "sgrule-1364136318",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00a59a67ef0eceee3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.admin",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP",
            "from_port": 80,
            "id": "sgrule-4070970366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05ee8b6fea1c40e99",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:subnet/subnet-0eccc58f20f849a16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eccc58f20f849a16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052937454741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-private-subnet-0"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-private-subnet-0"
            },
            "vpc_id": "vpc-0ff30a3274c30c3e3"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:subnet/subnet-0a92e7460acfc5e36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a92e7460acfc5e36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052937454741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-private-subnet-1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-private-subnet-1"
            },
            "vpc_id": "vpc-0ff30a3274c30c3e3"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:subnet/subnet-0861d7d5dd593fab6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0861d7d5dd593fab6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052937454741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-public-subnet-0"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-public-subnet-0"
            },
            "vpc_id": "vpc-0ff30a3274c30c3e3"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:subnet/subnet-0ec4d2c7a8ec7cd72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec4d2c7a8ec7cd72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052937454741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-public-subnet-1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-public-subnet-1"
            },
            "vpc_id": "vpc-0ff30a3274c30c3e3"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:vpc/vpc-0ff30a3274c30c3e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe688ea87f926d19",
            "default_route_table_id": "rtb-01673f9643f1b1cc5",
            "default_security_group_id": "sg-0e379017f2f17bbbb",
            "dhcp_options_id": "dopt-06a9498791bb6ebc9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ff30a3274c30c3e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01673f9643f1b1cc5",
            "owner_id": "052937454741",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-vpc"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-vpc"
            }
          }
        }
      ]
    }
  ]
}